# descant

./: .gitignore  README.md  descant.code-workspace  hatch.toml  mkdocs.yml  pyproject.toml
docs/: design.md  development.md  index.md  todo.md
src/descant/: cli.py  crypto.py  schema.py  site.py  web.py
