[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "descant"
description = 'A GDPR-compliant, JavaScript-based comment system.'
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "Keith Gaughan", email = "keith@gaughan.ie" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "aiohttp==3.8.1",
  "cryptography==3.4.8",
  "jinja2==3.0.1",
  "pyjwt==2.4.0",
  "sqlalchemy~=1.4.0",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/kgaughan/descant#readme"
Issues = "https://github.com/kgaughan/descant/issues"
Source = "https://github.com/kgaughan/descant"

[project.scripts]
descant = "descant.cli:main"

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "src/descant/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
